--- a/examples/test.html
+++ b/examples/test.html
@@ -2,14 +2,21 @@
 <script type="text/javascript" src="../build/g3.js"></script>
 <script type="text/javascript" src="../lib/three.min.js"></script>
 <script type="text/javascript">
-    var panorama = new g3.Panorama(document.getElementById('test'), 1000, 1000);
-    panorama.addScene("sky", [
+    var panorama = new g3.panorama.Panorama({
+        'container': document.getElementById('test'),
+        'width': 1000,
+        'height': 1000,
+        'draggable': true
+    });
+    var sky_scene = new g3.panorama.PanoScene([
         'textures/cube/skybox/px.jpg', // right
         'textures/cube/skybox/nx.jpg', // left
         'textures/cube/skybox/py.jpg', // top
         'textures/cube/skybox/ny.jpg', // bottom
         'textures/cube/skybox/pz.jpg', // back
-        'textures/cube/skybox/nz.jpg'
+        'textures/cube/skybox/nz.jpg'  // front
     ]);
-    panorama.setScene("sky");
+    panorama.addScene("sky", sky_scene);
+    panorama.setDefaultScene("sky");
+    panorama.render();
 </script>
