--- a/examples/test.html
+++ b/examples/test.html
@@ -2,13 +2,13 @@
 <script type="text/javascript" src="../build/g3.js"></script>
 <script type="text/javascript" src="../lib/three.min.js"></script>
 <script type="text/javascript">
-    var panorama = new g3.panorama.Panorama({
+    var panorama = new g3.Panorama({
         'container': document.getElementById('test'),
         'width': 1000,
         'height': 1000,
         'draggable': true
     });
-    var sky_scene = new g3.panorama.PanoScene([
+    panorama.addScene("sky", [
         'textures/cube/skybox/px.jpg', // right
         'textures/cube/skybox/nx.jpg', // left
         'textures/cube/skybox/py.jpg', // top
@@ -16,7 +16,6 @@
         'textures/cube/skybox/pz.jpg', // back
         'textures/cube/skybox/nz.jpg'  // front
     ]);
-    panorama.addScene("sky", sky_scene);
     panorama.setDefaultScene("sky");
     panorama.render();
 </script>
