--- a/examples/test.html
+++ b/examples/test.html
@@ -2,20 +2,35 @@
 <script type="text/javascript" src="../build/g3.js"></script>
 <script type="text/javascript" src="../lib/three.min.js"></script>
 <script type="text/javascript">
-    var panorama = new g3.Panorama({
+    var panorama = new g3.pano.Panorama({
         'container': document.getElementById('test'),
         'width': 1000,
         'height': 1000,
         'draggable': true
     });
-    panorama.addScene("sky", [
+
+    var scene = new g3.pano.Scene([
         'textures/cube/skybox/px.jpg', // right
         'textures/cube/skybox/nx.jpg', // left
         'textures/cube/skybox/py.jpg', // top
         'textures/cube/skybox/ny.jpg', // bottom
         'textures/cube/skybox/pz.jpg', // back
         'textures/cube/skybox/nz.jpg'  // front
-    ]);
+    ], new g3.pano.Position([0, 0]));    
+
+    //hotspot
+    var hotspot1 = new g3.pano.Hotspot("h1");
+    var hotspot2 = new g3.pano.Hotspot("h2");
+    scene.addHotspot("h1", new g3.pano.Position([10, 20]), hotspot1);
+    scene.addHotspot("h2", new g3.pano.Position([10, 70]), hotspot2);
+    
+    //scene
+    panorama.addScene("sky", scene);
     panorama.setDefaultScene("sky");
+
+    //loadding
+    panorama.bind("loadding", function(e){
+
+    });
     panorama.render();
 </script>
